--- a/data.html
+++ b/data.html
@@ -8,5 +8,8 @@
 <body>
     <h1>Hello, World!</h1>
     <p>This is a simple HTML document.</p>
+    <table>
+        <tr><td>i</td></tr>
+    </table>
 </body>
 </html>
