--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <input type="password" id="password" name="password" required>
             </div>
             <button type="submit">Login</button>
+            <button type="button" onclick="window.location.href='/register'">Register</button>
         </form>
     </div>
     
